cabal-version:      2.4
name:               hydra-test
version:            0.1.0.0

author:             Sasha Bogicevic
maintainer:         sasa.bogicevic@pm.me

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hydra-test
    main-is:          Main.hs

    build-depends:
        base ^>=4.14.3.0,
        hydra-test,
        bytestring

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
